# micropong

./: Cargo.toml  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
examples/: blink.rs  distance.rs  switch.rs
src/: main.rs  pong.rs  tetris.rs
