[package]
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "stm32f042-demo"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"


stm32f0xx-hal = {version = "0.14.1", features=["stm32f042"]}


embedded-hal = {version = "0.2.3", features = ["unproven"]}

vl53l0x = "0.2.2"

# this lets you use `cargo fix`!
[[bin]]
name = "stm32f042-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
