[package]
authors = ["Marek Miettinen <marek.miettinen@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "micropong"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.8"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
nb = "0.1.2"


stm32f0xx-hal = {version = "0.14.1", features=["stm32f042"]}


embedded-hal = {version = "0.2.3", features = ["unproven"]}

ssd1306 = {version ="0.2.6", features=["graphics"]}
embedded-graphics = "0.4.5"
arrayvec = {version ="0.4.11", default-features=false}
libm = "0.1.4"
wyhash = "0.3.0"

# this lets you use `cargo fix`!
[[bin]]
name = "micropong"
test = false
bench = false

[profile.dev]
opt-level = "z"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
